crates/rome_formatter/tests/specs/prettier/js/babel-plugins/decorators.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: decorators.js

---
# Input
```js
// https://babeljs.io/docs/en/babel-plugin-proposal-decorators

@annotation
class MyClass { }

function annotation(target) {
   target.annotated = true;
}

@isTestable(true)
class MyClass { }

function isTestable(value) {
   return function decorator(target) {
      target.isTestable = value;
   }
}

class C {
  @enumerable(false)
  method() { }
}

function enumerable(value) {
  return function (target, key, descriptor) {
     descriptor.enumerable = value;
     return descriptor;
  }
}

```

# Output
```js
// https://babeljs.io/docs/en/babel-plugin-proposal-decorators

@annotation
class MyClass { }

function annotation(target) {
  target.annotated = true;
}

@isTestable(true)
class MyClass { }

function isTestable(value) {
  return function decorator(target) {
    target.isTestable = value;
  };
}

class C {
  @enumerable(false)
  method() { }
}

function enumerable(value) {
  return function (target, key, descriptor) {
    descriptor.enumerable = value;
    return descriptor;
  };
}

```

# Errors
```
error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ decorators.js:3:1
  │
3 │ @annotation
  │ ^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ decorators.js:10:1
   │
10 │ @isTestable(true)
   │ ^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ decorators.js:20:3
   │
20 │   @enumerable(false)
   │   ^^^^^^^^^^^^^^^^^^ TypeScript only syntax


```


